add tag function

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,3 +2,6 @@
   <input id="recipe_title" name="title" type = "text" value="<%= @recipe.title %>">
   <label for="recipe_description">Description</label>
   <input id="recipe_description" name="description" type = "text" value="<%= @recipe.description %>">
+  <input id="tag_name" name="tag_1[name]" type = "text">
+  <label for="tag_name">Tag</label>
+  <input id="tag_name" name="tag_2[name]" type = "text">
