--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -5,5 +5,6 @@
 <form action="/recipes/<%= @recipe.id %>"  method="post">
   <input name="_method" type="hidden" value="patch">
   <%= render('form') %>
+  <label for="tag_name">Tag</label>
   <button>Update</button>
 </form>
