fix errors with non-standard tag entries, add bootstrap styling

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,4 +2,10 @@
 
 <p><%= @recipe.description %></p>
 
+<% @recipe.tags.each do |tag| %>
+  <li>
+    <%= tag.name %>
+  </li>
+<% end %>
+
 <a href="/recipes">Return to the Recipe Index</a>
